force-app/main/default/objects/Future_Gift_Allocation__c/Future_Gift_Allocation__c.object-meta.xml
<CustomObject>
    <label>Future Ask Allocation</label>
    <nameField>
        <displayFormat>FGA-{0000}</displayFormat>
        <label>Future Ask Allocation Name</label>
        <type>AutoNumber</type>
    </nameField>
    <pluralLabel>Future Ask Allocations</pluralLabel>
    <sharingModel>ControlledByParent</sharingModel>
</CustomObject>