force-app/main/default/objects/Future_Gift_Allocation__c/fields/Allocation_Amount__c.field-meta.xml
<CustomField>
    <fullName>Allocation_Amount__c</fullName>
    <label>Allocation Amount</label>
    <precision>18</precision>
    <required>true</required>
    <scale>2</scale>
    <type>Currency</type>
</CustomField>