force-app/main/default/objects/Future_Gift_Allocation__c/fields/Bib_Probability_Total__c.field-meta.xml
<CustomField>
    <fullName>Bib_Probability_Total__c</fullName>
    <description>Adding this field to help calculate remaining balance for funds to be raised on a project 2-2-22 jkrizan</description>
    <formula>Future_Gift__r.Probability_m__c *  Allocation_Amount__c</formula>
    <formulaTreatBlanksAs>BlankAsZero</formulaTreatBlanksAs>
    <label>Probability Total</label>
    <precision>18</precision>
    <scale>2</scale>
    <type>Currency</type>
</CustomField>