force-app/main/default/objects/Future_Gift_Allocation__c/fields/Future_Gift__c.field-meta.xml
<CustomField>
    <fullName>Future_Gift__c</fullName>
    <label>Future Ask</label>
    <referenceTo>Future_Gift__c</referenceTo>
    <relationshipLabel>Future Ask Allocations</relationshipLabel>
    <relationshipName>Future_Gift_Allocations</relationshipName>
    <relationshipOrder>0</relationshipOrder>
    <type>MasterDetail</type>
</CustomField>