force-app/main/default/objects/Future_Gift_Allocation__c/fields/General_Accounting_Unit__c.field-meta.xml
<CustomField>
    <fullName>General_Accounting_Unit__c</fullName>
    <deleteConstraint>Restrict</deleteConstraint>
    <label>General Accounting Unit</label>
    <referenceTo>npsp__General_Accounting_Unit__c</referenceTo>
    <relationshipName>Future_Gift_Allocations</relationshipName>
    <required>true</required>
    <type>Lookup</type>
</CustomField>