force-app/main/default/objects/Future_Gift_Allocation__c/fields/NeonId__c.field-meta.xml
<CustomField>
    <fullName>NeonId__c</fullName>
    <externalId>true</externalId>
    <label>NeonId</label>
    <length>15</length>
    <type>Text</type>
    <unique>true</unique>
</CustomField>