force-app/main/default/objects/Future_Gift_Allocation__c/fields/Project__c.field-meta.xml
<CustomField>
    <fullName>Project__c</fullName>
    <formula>IF(NOT(ISBLANK(General_Accounting_Unit__r.Project__c )), General_Accounting_Unit__r.Project__r.Name , &apos;GAU not connected to a Project&apos;)</formula>
    <formulaTreatBlanksAs>BlankAsZero</formulaTreatBlanksAs>
    <inlineHelpText>This is the Project associated with the General Accounting Unit.</inlineHelpText>
    <label>Project</label>
    <type>Text</type>
</CustomField>