force-app/main/default/objects/Future_Gift_Allocation__c/fields/Tax_Deductible__c.field-meta.xml
<CustomField>
    <fullName>Tax_Deductible__c</fullName>
    <defaultValue>true</defaultValue>
    <label>Tax-Deductible</label>
    <type>Checkbox</type>
</CustomField>