force-app/main/default/objects/Future_Gift_Allocation__c/fields/Validate_Allocation__c.field-meta.xml
<CustomField>
    <fullName>Validate_Allocation__c</fullName>
    <formula>IF(
OR(ISPICKVAL(Future_Gift__r.Stage__c, &apos;Commitment Made&apos;),
ISPICKVAL(Future_Gift__r.Stage__c, &apos;Stewardship&apos;)),
true,
false)</formula>
    <formulaTreatBlanksAs>BlankAsZero</formulaTreatBlanksAs>
    <label>Validate Allocation</label>
    <type>Checkbox</type>
</CustomField>